add test job to move data from hdfs to s3, and refactor shell scripts